NEXT-359 - Introduce sw-info-card

--- a/Resources/administration/src/module/sw-order/view/sw-order-detail-base/sw-order-detail-base.html.twig
+++ b/Resources/administration/src/module/sw-order/view/sw-order-detail-base/sw-order-detail-base.html.twig
@@ -2,47 +2,59 @@
     <div class="sw-order-detail-base">
 
         {% block sw_order_detail_base_info_card %}
-            <sw-card :title="$tc('sw-order.detailBase.cardTitleDetails')"
-                     :isLoading="order.isLoading">
+            <sw-info-card :title="$tc('sw-order.detailBase.cardTitleDetails')"
+                          :user="order.customer"
+                          :isLoading="order.isLoading">
 
-                {% block sw_order_detail_base_info_card_rows %}
-                    <sw-container slot="grid" type="row">
-
-                        {% block sw_order_detail_base_info_card_row_user %}
-                            <sw-card-section divider="bottom">
-                                <sw-avatar :color="moduleColor"
-                                           size="80px"
-                                           :user="order.customer"
-                                           :isLoading="order.isLoading">
-                                </sw-avatar>
-                            </sw-card-section>
+                {% block sw_order_detail_base_info_card_actions %}
+                    <template slot="actions">
+                        {% block sw_order_detail_base_info_card_action_print %}
+                            <sw-button size="small">
+                                <sw-icon name="default-device-printer" small></sw-icon>
+                                {{ $tc('sw-order.detailBase.buttonPrint') }}
+                            </sw-button>
                         {% endblock %}
 
-                        {% block sw_order_detail_base_info_card_row_order_data %}
-                            <sw-card-section secondary slim>
-                                <sw-container grid="1fr 1fr" gap="30px 30px">
-
-                                    <sw-description-list>
-                                        <dt>{{ $tc('sw-order.detailBase.labelOrderStatus') }}</dt>
-                                        <dd>{{ order.state.description }}</dd>
-                                        <dt>{{ $tc('sw-order.detailBase.labelOrderDate') }}</dt>
-                                        <dd>{{ order.date | date }}</dd>
-                                        <dt>{{ $tc('sw-order.detailBase.labelSalesChanel') }}</dt>
-                                        <dd>{{ order.touchpoint.name }}</dd>
-                                    </sw-description-list>
-
-                                    <sw-address :headline="$tc('sw-order.detailBase.headlineBillingAddress')"
-                                                :address="order.billingAddress">
-                                    </sw-address>
-
-                                </sw-container>
-                            </sw-card-section>
+                        {% block sw_order_detail_base_info_card_action_archive %}
+                            <sw-button size="small">
+                                <sw-icon name="small-documentation-map-closed" small></sw-icon>
+                                {{ $tc('sw-order.detailBase.buttonArchive') }}
+                            </sw-button>
                         {% endblock %}
 
+                        {% block sw_order_detail_base_info_card_action_cancel %}
+                            <sw-button size="small">
+                                <sw-icon name="small-default-x-line-medium" small></sw-icon>
+                                {{ $tc('sw-order.detailBase.buttonCancel') }}
+                            </sw-button>
+                        {% endblock %}
+                    </template>
+                {% endblock %}
+
+                {% block sw_order_detail_base_info_card_order_overview %}
+                    <sw-container grid="1fr 1fr" gap="30px 30px">
+                        {% block sw_order_detail_base_info_card_order_metadata %}
+                            <sw-description-list>
+                                <dt>{{ $tc('sw-order.detailBase.labelOrderStatus') }}</dt>
+                                <dd>{{ order.state.description }}</dd>
+                                <dt>{{ $tc('sw-order.detailBase.summaryLabelAmountTotal') }}</dt>
+                                <dd>{{ order.amountTotal | currency }}</dd>
+                                <dt>{{ $tc('sw-order.detailBase.labelOrderDate') }}</dt>
+                                <dd>{{ order.date | date }}</dd>
+                                <dt>{{ $tc('sw-order.detailBase.labelSalesChanel') }}</dt>
+                                <dd>{{ order.touchpoint.name }}</dd>
+                            </sw-description-list>
+                        {% endblock %}
+
+                        {% block sw_order_detail_base_info_card_billing_address %}
+                            <sw-address :headline="$tc('sw-order.detailBase.headlineBillingAddress')"
+                                        :address="order.billingAddress">
+                            </sw-address>
+                        {% endblock %}
                     </sw-container>
                 {% endblock %}
 
-            </sw-card>
+            </sw-info-card>
         {% endblock %}
 
         {% block sw_order_detail_base_line_items_card %}
@@ -57,14 +69,11 @@
                         {% endblock %}
 
                         {% block sw_order_detail_base_line_items_row_summary %}
-                            <sw-card-section class="sw-order-detail-base__summary"
-                                             divider="top"
-                                             secondary
-                                             slim>
-                                <sw-container grid="1fr 440px" style="grid-template-areas: 'empty summary'">
+                            <sw-card-section divider="top" secondary slim>
+                                <sw-container grid="1fr 440px"
+                                              class="sw-order-detail-base__summary">
                                     {% block sw_order_detail_base_line_items_summary %}
                                         <sw-description-list columns="265px 1fr"
-                                                             style="grid-area: summary"
                                                              class="sw-order-detail-base__summary-data">
                                             <dt>{{ $tc('sw-order.detailBase.summaryLabelAmount') }}</dt>
                                             <dd>{{ order.positionPrice | currency }}</dd>
