--- a/Resources/administration/src/app/component/context-menu/sw-context-menu/sw-context-menu.less
+++ b/Resources/administration/src/app/component/context-menu/sw-context-menu/sw-context-menu.less
@@ -13,7 +13,7 @@
     .sw-context-menu__content {
         padding: 5px 0;
         background: @color-white;
-        box-shadow: 0 3px 6px 0 rgba(120,138,155,0.5);
+        box-shadow: 0 3px 6px 0 rgba(120, 138, 155, 0.3);
         border: 1px solid @sw-context-menu-color-border;
         border-radius: 4px;
         text-align: left;
