--- a/Resources/administration/src/app/component/grid/sw-grid-row/sw-grid-row.less
+++ b/Resources/administration/src/app/component/grid/sw-grid-row/sw-grid-row.less
@@ -26,6 +26,10 @@
 
     &:hover {
         background: lighten(@sw-grid-item-active-color-background, 2%);
+
+        .sw-grid__cell-content a {
+            color: @color-shopware-blue;
+        }
     }
 
     &.is--selected {
