--- a/Resources/administration/src/app/component/grid/sw-grid/sw-grid.html.twig
+++ b/Resources/administration/src/app/component/grid/sw-grid/sw-grid.html.twig
@@ -16,7 +16,7 @@
                                 {% endblock %}
 
                                 {% block sw_grid_slot_header_cell %}
-                                    <div :class="[{ 'sw-grid-column': true, 'is--sortable': column.sortable, 'is--sorted': sort === column.dataIndex }, `sw-grid__cell-${column.align}`]"
+                                    <div :class="[{ 'sw-grid-column': true, 'is--sortable': column.sortable, 'is--sorted': sort === column.dataIndex }, `sw-grid-column--${column.align}`]"
                                          v-for="column in columns"
                                          @click="onGridCellClick($event, column)">
 
@@ -29,13 +29,13 @@
                                                 {% endblock %}
 
                                                 {% block sw_grid_slot_header_cell_label %}
-                                                    <span v-else class="sw-grid__cell-label">{{ column.label }}</span>
+                                                    <span v-else-if="column.label" class="sw-grid__cell-label">{{ column.label }}</span>
                                                 {% endblock %}
 
                                                 {% block sw_grid_slot_header_cell_sortable %}
                                                     <span class="sw-grid_cell-sortable" v-if="column.sortable && sort === column.dataIndex">
-                                                        <sw-icon name="default-arrow-head-down" size="10px" v-if="sortDir === 'ASC'"></sw-icon>
-                                                        <sw-icon name="default-arrow-head-up" size="10px" v-else></sw-icon>
+                                                        <sw-icon name="small-arrow-small-down" size="16px" v-if="sortDir === 'ASC'"></sw-icon>
+                                                        <sw-icon name="small-arrow-small-up" size="16px" v-else></sw-icon>
                                                     </span>
                                                 {% endblock %}
                                             </div>
